# my-site

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  index.html  next.config.ts  package.json  styles.css  tsconfig.json
.forgejo/workflows/: docker-publish.yml
.github/: dependabot.yml
.github/workflows/: docker.yml
analyze/: nodejs.html
app/: globals.css  layout.tsx  page.tsx
pages/: 404.tsx  500.tsx  _app.tsx  index.tsx
src/: main.rs
static/css/: style.css
templates/: index.html
